Add crons && some fixes
