# swagger.yaml
@@ -33,7 +33,45 @@ components:
         message: "bad request"
 
 paths:
-  /add_segment:
+  /add_segment_v1:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - slug
+              properties:
+                slug:
+                  type: string
+                  description: Segment name
+                percent:
+                  type: integer
+                  description: Segment percent
+              example:
+                slug: "AVITO_VOICE_MESSAGES"
+                percent: 10
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                "$ref": '#/components/schemas/responseWithStatusOk'
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                "$ref": '#/components/schemas/responseWithStatusBadRequest'
+        500:
+          description: OK
+          content:
+            application/json:
+              schema:
+                "$ref": '#/components/schemas/responseWithStatusInternal'
+  /delete_segment_v1:
     post:
       requestBody:
         content:
@@ -67,41 +105,7 @@ paths:
             application/json:
               schema:
                 "$ref": '#/components/schemas/responseWithStatusInternal'
-  /delete_segment:
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - slug
-              properties:
-                slug:
-                  type: string
-                  description: Segment name
-              example:
-                slug: "AVITO_VOICE_MESSAGES"
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                "$ref": '#/components/schemas/responseWithStatusOk'
-        400:
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                "$ref": '#/components/schemas/responseWithStatusBadRequest'
-        500:
-          description: OK
-          content:
-            application/json:
-              schema:
-                "$ref": '#/components/schemas/responseWithStatusInternal'
-  /add_user_to_segments:
+  /add_user_to_segments_v1:
     post:
       requestBody:
         content:
@@ -145,7 +149,7 @@ paths:
             application/json:
               schema:
                 "$ref": '#/components/schemas/responseWithStatusInternal'
-  /delete_user_from_segment:
+  /delete_user_from_segment_v1:
     post:
       requestBody:
         content:
@@ -184,7 +188,7 @@ paths:
             application/json:
               schema:
                 "$ref": '#/components/schemas/responseWithStatusInternal'
-  /get_user_active_segments:
+  /get_user_active_segments_v1:
     post:
       requestBody:
         content:
@@ -224,7 +228,7 @@ paths:
             application/json:
               schema:
                 "$ref": '#/components/schemas/responseWithStatusInternal'
-  /get_user_logs:
+  /get_user_logs_v1:
     post:
       requestBody:
         content:
@@ -240,17 +244,17 @@ paths:
                   type: integer
                 to:
                   type: string
-                  description: To (in RFC3339)
+                  description: To (in year-month)
                 from:
                   type: string
-                  description: From (in RFC3339)
+                  description: From (in year-month)
                 separator:
                   type: string
                   description: Preferred separator "," or ";"
               example:
                 userId: 10
-                from: "2023-08-26T14:11:29+02:00"
-                to: "2023-08-27T14:11:29+02:00"
+                from: "2023-08"
+                to: "2023-09"
                 separator: ","
       responses:
         '200':
